(fix) : Correciones del darkmode + Implementacion de contexto al modelo

--- a/src/frontend/404.html
+++ b/src/frontend/404.html
@@ -6,6 +6,7 @@
         <title>Página no encontrada - 404</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
+        <script src="js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-4 min-h-screen flex flex-col">
         <header class="flex justify-between items-center gap-4 p-4 bg-secondary rounded-lg">
