--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <script src="assets/particles.js"></script>
+        <script src="js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-2 sm:p-4 min-h-screen">
         <main class="animate-fadeIn">
