--- a/src/frontend/quizzes.html
+++ b/src/frontend/quizzes.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="css/style.css" />
+        <script src="js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-4 sm:p-4 h-screen">
         <div class="flex flex-col gap-5">
