(refactor): Implementacion completa del darkmode y lightmode

--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -37,7 +37,7 @@
 
             <div class="flex flex-col lg:flex-row gap-3 sm:gap-5 mt-3 min-h-[calc(100vh-120px)] lg:h-[87vh]">
                 <div class="bg-secondary w-full lg:w-[15vw] lg:min-w-[250px] rounded-lg p-3 sm:p-4 flex flex-col gap-2 animate-slideInLeft order-2 lg:order-1">
-                    <a href="#" class="flex rounded-lg bg-background-light w-full p-3 hover:bg-secondary transition-all duration-300 hover:scale-105 transform">
+                    <a href="index.html" class="flex rounded-lg bg-background-light w-full p-3 hover:bg-secondary transition-all duration-300 hover:scale-105 transform">
                         <i class="bx bx-home text-lg sm:text-xl pr-2"></i>
                         <p class="text-sm sm:text-base">Inicio</p>
                     </a>
@@ -62,9 +62,9 @@
                             </div>
                         </div>
 
-                        <button id="logout-btn" class="flex items-center gap-3 p-3 bg-red-900/30 rounded-lg hover:bg-red-800/40 transition-all duration-300 hover:scale-105 transform w-full text-left mt-auto">
+                        <button id="logout-btn" class="flex items-center gap-3 p-3 bg-red-900/30 dark:bg-red-700/50 rounded-lg hover:cursor-pointer transition-all duration-300 hover:scale-105 transform w-full text-left mt-auto">
                             <i class="bx bx-log-out text-lg sm:text-xl text-red-400"></i>
-                            <span class="text-xs sm:text-sm text-red-400">Cerrar sesión</span>
+                            <span class="text-xs sm:text-sm text-red-400 dark:text-red-100 ">Cerrar sesión</span>
                         </button>
                     </div>
                 </div>
