--- a/src/frontend/dashboard.html
+++ b/src/frontend/dashboard.html
@@ -17,6 +17,13 @@
         <div class="flex gap-2">
           <a class="p-3 rounded-lg bg-secondary text-text font-bold" href="/quizzes">Quizzes</a>
           <a class="p-3 rounded-lg bg-secondary text-text font-bold" href="/app">Chat</a>
+          <button id="theme-toggle" type="button" class=" block font-medium text-text rounded-full  focus:outline-hidden  dark:text-text dark:hover:bg-background">
+            <span class="group inline-flex shrink-0 justify-center items-center size-9">
+                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                </svg>
+            </span>
+        </button>
         </div>
       </div>
 
