--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -14,10 +14,9 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="js/theme-init.js"></script>
     </head>
-    <body class="bg-background text-text p-4  flex flex-col justify-center">
-        
+    <body class="bg-background text-text p-4 flex flex-col justify-center">
         <div data-aos="fade-up" data-aos-delay="300" class="mx-auto">
-            <a href="/"><img src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" class="w-30 sm:hidden"></a>
+            <a href="/"><img src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" class="w-30 sm:hidden" /></a>
         </div>
         <!-- Header -->
         <header data-aos="fade-up" data-aos-delay="300" class="text-center mt-5 mb-5">
@@ -26,7 +25,7 @@
         </header>
 
         <!-- Contenedor Login + Imagen -->
-        <div data-aos="fade-up" data-aos-delay="300" class="flex flex-col sm:flex-row items-center justify-center gap-12 w-[90%]  mx-auto">
+        <div data-aos="fade-up" data-aos-delay="300" class="flex flex-col sm:flex-row items-center justify-center gap-12 w-[90%] mx-auto">
             <!-- Formulario -->
             <div class="w-[22rem] 2xl:w-[26rem] bg-background border rounded-2xl p-6 shadow-lg">
                 <h2 class="mb-5 font-black text-3xl text-text">Iniciar sesión</h2>
@@ -45,7 +44,7 @@
                         <input type="password" name="password" id="password" placeholder="Tu contraseña" class="mt-1 p-3 bg-background rounded-lg border text-text w-full" required />
                     </label>
 
-                    <button type="submit" id="submitBtn" class="hover:cursor-pointer hover:bg-gray-300 p-3 bg-white text-background font-black text-xl rounded-xl disabled:opacity-50 disabled:cursor-not-allowed">Iniciar Sesión</button>
+                    <button type="submit" id="submitBtn" class="hover:cursor-pointer hover:bg-gray-300 p-3 bg-secondary text-text font-black text-xl rounded-xl disabled:opacity-50 disabled:cursor-not-allowed">Iniciar Sesión</button>
                 </form>
 
                 <div class="flex justify-center mt-3">
@@ -59,12 +58,22 @@
             <!-- Imagen / Logo -->
             <div class="sm:flex justify-center hidden">
                 <a href="/">
-                    <img class="w-[300px]  " src="assets/svg/MentorIA-logo.svg" alt="MentorIA logo" />
+                    <img class="w-[300px]" src="assets/svg/MentorIA-logo.svg" alt="MentorIA logo" />
                 </a>
             </div>
         </div>
         <div id="particles-js" class="absolute top-0 left-0 w-full h-full -z-10"></div>
-        
-        <script>AOS.init();</script>
+
+        <button id="theme-toggle" type="button" class="fixed bottom-4 right-4 bg-secondary text-text p-3 rounded-full shadow-lg hover:bg-secondary/80 focus:outline-none transition-colors duration-300">
+            <span class="inline-flex justify-center items-center w-9 h-9">
+                <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                </svg>
+            </span>
+        </button>
+
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
