--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -19,10 +19,19 @@
                     <img src="assets/svg/logo.svg" alt="Logo de MentorIA" class="w-10 h-10 sm:w-12 sm:h-12 lg:w-16 lg:h-16 animate-pulse-gentle" />
                     <h2 class="font-black text-lg sm:text-xl lg:text-2xl ml-2 sm:ml-3">MentorIA - Perfil</h2>
                 </div>
-                <button onclick="goBack()" class="flex items-center gap-2 p-2 bg-background-light rounded-lg hover:bg-secondary transition-all duration-300">
-                    <i class="bx bx-arrow-back text-lg"></i>
-                    <span class="hidden sm:inline text-sm">Volver</span>
-                </button>
+                <div class="flex gap-3">
+                    <button onclick="goBack()" class="flex items-center gap-2 p-2 bg-background-light rounded-lg hover:bg-secondary transition-all duration-300">
+                        <i class="bx bx-arrow-back text-lg"></i>
+                        <span class="hidden sm:inline text-sm">Volver</span>
+                    </button>
+                    <button id="theme-toggle" type="button" class="block font-medium text-text rounded-full focus:outline-hidden dark:text-text dark:hover:bg-background">
+                        <span class="group inline-flex shrink-0 justify-center items-center size-9">
+                            <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
             </div>
 
             <div class="flex justify-center mt-6">
@@ -102,11 +111,11 @@
 
                             <!-- Botones -->
                             <div class="flex flex-col sm:flex-row gap-3 pt-6">
-                                <button type="button" onclick="goBack()" class="flex-1 bg-gray-600 hover:bg-gray-700 text-text font-bold py-3 px-6 rounded-lg transition-all duration-300 hover:scale-105 transform flex items-center justify-center">
+                                <button type="button" onclick="goBack()" class="flex-1 bg-warning/50 text-text font-bold py-3 px-6 rounded-lg transition-all duration-300 hover:scale-105 transform flex items-center justify-center">
                                     <i class="bx bx-arrow-back mr-2"></i>
                                     Volver sin Guardar
                                 </button>
-                                <button type="submit" id="saveBtn" class="flex-1 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-text font-bold py-3 px-6 rounded-lg transition-all duration-300 hover:scale-105 transform flex items-center justify-center">
+                                <button type="submit" id="saveBtn" class="flex-1 bg-success/50 text-text font-bold py-3 px-6 rounded-lg transition-all duration-300 hover:scale-105 transform flex items-center justify-center">
                                     <i class="bx bx-save mr-2"></i>
                                     Guardar Cambios
                                 </button>
