--- a/src/frontend/quizzes.html
+++ b/src/frontend/quizzes.html
@@ -8,22 +8,33 @@
         <script src="js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-4 sm:p-4 h-screen">
-        <div class="flex flex-col gap-5">
-            <div class="flex justify-between items-center">
+        <div class="max-w-6xl mx-auto mb-4">
+            <div class="flex justify-between">
                 <div class="h-14 sm:h-16 lg:h-[7vh] flex items-center sm:px-4 animate-slideInLeft">
                     <img src="assets/svg/logo.svg" alt="Logo de MentorIA" class="h-full" />
                     <img />
                     <h2 class="text-text font-black text-lg sm:text-xl lg:text-2xl ml-2 sm:ml-3">MentorIA</h2>
                 </div>
-                <div class="mt-2">
-                    <a class="p-3 rounded-lg bg-secondary text-text font-bold" href="app.html">CHAT</a>
+                <div class="mt-2 flex gap-3">
+                    <a class="p-3 rounded-lg bg-secondary text-text font-bold" href="dashboard.html">Dashboard</a>
+                    <a class="p-3 rounded-lg bg-secondary text-text font-bold" href="app.html">Chat</a>
+                    <button id="theme-toggle" type="button" class="block font-medium text-text rounded-full focus:outline-hidden dark:text-text dark:hover:bg-background">
+                        <span class="group inline-flex shrink-0 justify-center items-center size-9">
+                            <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                            </svg>
+                        </span>
+                    </button>
                 </div>
             </div>
+        </div>
+        <div class="flex flex-col gap-5">
+            
 
             <div class="p-3 px-6 rounded-lg bg-background-light flex flex-col gap-10">
                 <h1 class="mt-10 font-bold text-5xl lg:text-6xl 2xl:text-8xl text-text text-center">Genera un Quizz con IA</h1>
                 <h2 class="text-text font-bold text-xl lg:text-2xl 2xl:text-3xl text-center">del tema de preferencia que quieras.</h2>
-<div class="flex justify-center">
+                <div class="flex justify-center">
                     <form id="quiz-form" class="w-full max-w-3xl">
                         <div class="flex gap-3 items-center">
                             <div class="bg-secondary rounded-full w-full">
@@ -41,8 +52,8 @@
 
                 <div id="quiz-area" class="max-w-3xl w-full mx-auto"></div>
                 <h2 class="font-black text-4xl text-text text-center">Quizzes recientes</h2>
-                <div class="flex flex-col items-center">
-<div id="recent-quizzes-grid" class="grid grid-cols-2 gap-4 md:grid-cols-3 2xl:grid-cols-4 max-w-[1300px]"></div>
+                <div class="flex flex-col items-center ">
+                    <div id="recent-quizzes-grid" class="grid grid-cols-2 gap-4 md:grid-cols-3 2xl:grid-cols-4 max-w-[1300px]"></div>
                 </div>
             </div>
         </div>
