--- a/src/frontend/registro.html
+++ b/src/frontend/registro.html
@@ -27,7 +27,7 @@
         </header>
 
         <!-- Registro + Imagen -->
-        <div  class="flex flex-col lg:flex-row items-center justify-center w-full max-w-[1200px] gap-6 lg:gap-10 mt-4 lg:mt-10 px-4">
+        <div class="flex flex-col lg:flex-row items-center justify-center w-full max-w-[1200px] gap-6 lg:gap-10 mt-4 lg:mt-10 px-4">
             <div class="">
                 <a href="/">
                     <img data-aos="fade-up" data-aos-delay="300" class="w-40 sm:w-52 md:w-60 lg:w-72 2xl:w-96" src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" />
@@ -37,10 +37,10 @@
             <div data-aos="fade-up" data-aos-delay="300" class="w-full max-w-md bg-background border-2 border-gray-700 rounded-2xl p-6">
                 <h2 class="font-black text-2xl sm:text-3xl md:text-3xl text-text mb-4">Registrarse</h2>
 
-                <!-- Mensaje de estado --> 
+                <!-- Mensaje de estado -->
                 <div id="message" class="hidden p-3 rounded-lg text-center font-bold"></div>
-                
-                <form  id="registerForm" class="flex flex-col gap-1">
+
+                <form id="registerForm" class="flex flex-col gap-1">
                     <label class="font-bold" for="username">
                         Nombre de usuario
                         <input type="text" name="username" id="username" placeholder="Tu nombre de usuario" class="mt-1 sm:p-2 p-2 bg-background rounded-lg border border-gray-500 text-text w-full" required />
@@ -61,10 +61,10 @@
                         <label for="terms" class="text-sm sm:text-base">Aceptar términos y condiciones.</label>
                     </div>
 
-                    <button type="submit" id="submitBtn" class="mt-2 sm:mt-2 p-1 sm:p-2 bg-white text-background font-black text-lg sm:text-xl rounded-xl hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">Crear cuenta</button>
+                    <button type="submit" id="submitBtn" class="mt-2 sm:mt-2 p-1 sm:p-2 bg-secondary text-text font-black text-lg sm:text-xl rounded-xl hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">Crear cuenta</button>
                 </form>
 
-                <div  class="flex justify-center mt-1 sm:mt-2 text-sm sm:text-base">
+                <div class="flex justify-center mt-1 sm:mt-2 text-sm sm:text-base">
                     <a class="text-text" href="/login">
                         ¿Ya tienes una sesión?
                         <span class="font-bold">Clica aquí</span>
@@ -73,7 +73,17 @@
             </div>
         </div>
         <div id="particles-js" class="absolute top-0 left-0 w-full h-full -z-10"></div>
+
+        <button id="theme-toggle" type="button" class="fixed bottom-4 right-4 bg-secondary text-text p-3 rounded-full shadow-lg hover:bg-secondary/80 focus:outline-none transition-colors duration-300">
+            <span class="inline-flex justify-center items-center w-9 h-9">
+                <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                </svg>
+            </span>
+        </button>
     </body>
     <script src="js/registro.js"></script>
-    <script>AOS.init()</script>
+    <script>
+        AOS.init();
+    </script>
 </html>
