--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -76,7 +76,7 @@
                                 <img id="chat-logo" class="size-40 lg:size-45" src="assets/svg/logo.svg" />
                             </div>
                         </div>
-                        <div id="chat-box" class="flex flex-col overflow-y-auto bg-background-light rounded-xl custom-scrollbar items-center"></div>
+                        <div id="chat-box" class="flex flex-col overflow-y-auto  rounded-xl custom-scrollbar items-center"></div>
                         <h1 id="chat-title" class="font-bold text-2xl sm:text-2xl lg:text-3xl xl:text-4xl text-center px-4 leading-tight">¿Qué quieres estudiar hoy?</h1>
                     </div>
 
